Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.2.7, 6.2.8, 6.5.1
-
6f5284924 (dev), 9b22caaad (6.6), 183cb5a61 (6.5), 43c395a06 (tqtc/lts-6.2)
Description
There is a crash specifically when points in a QScatterSeries are selected/deselected by clicking on them.
The problem can be reproduced with the attached code. Try clicking on a point multiple times quickly. Crash will mostly happen somewhere between 3-20 clicks.